Fix issues with margin and spacing in about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ header {
     margin-bottom: 20px;
     display: block;
     clear: both;
+    width: 100%;
 }
 
 .personal-info-item .key,
